Unify file naming style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5992 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -11,13 +11,13 @@
 	<script type="application/x-javascript" src="./pages.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
 	<script type="application/x-javascript" src="./helper.js"></script>
-	<script type="application/x-javascript" src="./xml_load.js"></script>
+	<script type="application/x-javascript" src="./xml-load.js"></script>
 	<script type="application/x-javascript" src="./stats.js"></script>
 	<script type="application/x-javascript" src="./redirections.js"></script>
 	<script type="application/x-javascript" src="./read-ht-prefs.js"></script>
 	<script type="application/x-javascript" src="./preferences-dialog-html.js"></script>
 	<script type="application/x-javascript" src="./preferences-on-page.js"></script>
-	<script type="application/x-javascript" src="./forum_stage.js"></script>
+	<script type="application/x-javascript" src="./forum-stage.js"></script>
 	<script type="application/x-javascript" src="./header-copy-icons.js"></script>
 
 	<!-- utilities -->
@@ -52,42 +52,42 @@
 	<script type="application/x-javascript" src="./matches/match-income.js"></script>
 	<script type="application/x-javascript" src="./matches/copy-ratings.js"></script>
 	<script type="application/x-javascript" src="./matches/htms-statistics.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/table-sort.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/flag-collection-to-map.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/median-transfer-price.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/transfer-search-filters.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/transfer-deadline.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/youth-skill-notes.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/manager-buttons.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/confirm-actions.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/copy-player-ad.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/team-stats.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/history-stats.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/team-select-box.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/senior-team-shortcuts.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/extra-shortcuts.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/copy-match-id.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/context-menu-copy.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/copy-training-report.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/player-birthday.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/season-stats.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/youth-skill-hide-unknown.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/skill-table.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/tables.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/cross-table.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/election-table.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/lineup-shortcut.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/youth-promotes.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/last-login.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/league-and-match-chat.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/rapid-id.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/extra-player-info.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/player-filters.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/youth-series-estimation.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/transfer-search-result-filters.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/nt-peek.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/extended-player-details.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/htms-points.js" />
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/table-sort.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/flag-collection-to-map.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/median-transfer-price.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-filters.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-deadline.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/youth-skill-notes.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/manager-buttons.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/confirm-actions.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/copy-player-ad.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/team-stats.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/history-stats.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/team-select-box.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/senior-team-shortcuts.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/extra-shortcuts.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/copy-match-id.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/context-menu-copy.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/copy-training-report.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/player-birthday.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/season-stats.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/youth-skill-hide-unknown.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/skill-table.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/tables.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/cross-table.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/election-table.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/lineup-shortcut.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/youth-promotes.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/last-login.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/league-and-match-chat.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/rapid-id.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/extra-player-info.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/player-filters.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/youth-series-estimation.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-result-filters.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/nt-peek.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/extended-player-details.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/htms-points.js" />
 	<script type="application/x-javascript" src="./presentation/original-face.js"></script>
 	<script type="application/x-javascript" src="./presentation/move-player-statement.js"></script>
 	<script type="application/x-javascript" src="./presentation/personality-images.js"></script>
@@ -144,7 +144,7 @@
 
 	<!-- following modules all run on 'all_late' pages. order of execution is determined be following order -->
 	<script type="application/x-javascript" src="./presentation/currency-converter.js"></script>
-	<script type="application/x-javascript" src="./shortcuts_and_tweaks/team-popup-links.js"></script>
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/team-popup-links.js"></script>
 
 	<script type="application/x-javascript" src="./modules.js"></script>
 	<script type="application/x-javascript" src="./foxtrick.js"></script>
