--- a/content/background.html
+++ b/content/background.html
@@ -3,7 +3,7 @@
 	<script type="application/x-javascript" src="./const.js"></script>
 	<script type="application/x-javascript" src="./prefs.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
-	<script type="application/x-javascript" src="./xml_load.js"></script>
+	<script type="application/x-javascript" src="./xml-load.js"></script>
 	<script type="application/x-javascript" src="./foxtrick.js"></script>
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
