--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -19,10 +19,14 @@
 	<script type="application/x-javascript" src="./preferences-on-page.js"></script>
 	<script type="application/x-javascript" src="./forum-stage.js"></script>
 	<script type="application/x-javascript" src="./header-copy-icons.js"></script>
+	<script type="application/x-javascript" src="./core.js"></script>
 
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/currency.js"></script>
+	<script type="application/x-javascript" src="./util/html.js"></script>
+	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
+	<script type="application/x-javascript" src="./util/string.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
 
 	<!-- individual modules -->
