Add util scripts to background.html.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6018 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+	<script type="application/x-javascript" src="./util/currency.js"></script>
+	<script type="application/x-javascript" src="./util/html.js"></script>
+	<script type="application/x-javascript" src="./util/misc.js"></script>
+	<script type="application/x-javascript" src="./util/note.js"></script>
+	<script type="application/x-javascript" src="./util/string.js"></script>
+	<script type="application/x-javascript" src="./util/time.js"></script>
 	<script type="application/x-javascript" src="./const.js"></script>
 	<script type="application/x-javascript" src="./prefs.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
