ApiProxy module for authorizing and retrieving XML data.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6025 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -20,6 +20,9 @@
 	<script type="application/x-javascript" src="./forum-stage.js"></script>
 	<script type="application/x-javascript" src="./header-copy-icons.js"></script>
 	<script type="application/x-javascript" src="./core.js"></script>
+	<script type="application/x-javascript" src="./api-proxy.js"></script>
+	<script type="application/x-javascript" src="./oauth.js"></script>
+	<script type="application/x-javascript" src="./sha1.js"></script>
 
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/currency.js"></script>
