foxtrick.properties: remove deprecated entries and reorder.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6068 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -215,7 +215,7 @@
 					<label id="pref-save-data-label" for="pref-save-data" text-key="foxtrick.prefs.labelSavePrefs_Notes"></label>
 				</li>
 			</ul>
-			<p><button id="pref-save-do" text-key="foxtrick.prefs.buttonSavePrefs"></button></p>
+			<p><button id="pref-save-do" text-key="button.export"></button></p>
 			<p><textarea id="pref-save-text"></textarea></p>
 			<p text-key="foxtrick.prefs.saveNotice"></p>
 		</div>
@@ -223,7 +223,7 @@
 		<div>
 			<p text-key="foxtrick.prefs.loadNotice"></p>
 			<p><textarea id="pref-load-text"></textarea></p>
-			<p><button id="pref-load-do" text-key="foxtrick.prefs.buttonLoadPrefs"></button></p>
+			<p><button id="pref-load-do" text-key="button.import"></button></p>
 		</div>
 	</div><!-- LoadSavePrefs -->
 	<div class="module"><!-- StoredPrefs -->
@@ -231,11 +231,11 @@
 		<table>
 			<tr>
 				<td><label id="pref-stored-restore-label" text-key="foxtrick.prefs.labelCleanupBranch"></label></td>
-				<td><button id="pref-stored-restore" text-key="foxtrick.prefs.buttonCleanupBranch"></button></td>
+				<td><button id="pref-stored-restore" text-key="button.restoreDefault"></button></td>
 			</tr>
 			<tr>
 				<td><label id="pref-stored-disable-label" text-key="foxtrick.prefs.labelDisableAll"></label></td>
-				<td><button id="pref-stored-disable" text-key="foxtrick.prefs.buttonDisableAll"></button></td>
+				<td><button id="pref-stored-disable" text-key="button.disableAll"></button></td>
 			</tr>
 		</table>
 	</div><!-- StoredPrefs -->
@@ -330,8 +330,8 @@
 
 <div id="fixed">
 	<div id="balloon">
-		<button id="save" text-key="foxtrick.prefs.buttonSave"></button>
-		<button id="cancel" text-key="foxtrick.prefs.buttonCancel"></button>
+		<button id="save" text-key="button.save"></button>
+		<button id="cancel" text-key="button.cancel"></button>
 	</div>
 	<div id="note">
 		<p id="note-content"></p>
