Links at help pane add and remove.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6071 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -296,7 +296,7 @@
 </div>
 <div id="pane-help">
 	<div class="module">
-		<h3 text-key="foxtrick.prefs.links"></h3>
+		<h3 text-key="link.title"></h3>
 		<ul id="external-links-list"></ul>
 	</div>
 	<div class="module">
