--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -306,6 +306,51 @@
 </div>
 <div id="pane-about">
 	<div class="module">
+		<h3 text-key="about.copyright"></h3>
+		<h4>FoxTrick - a browser add-on for the Hattrick.org online football manager game</h4>
+		<ul>
+			<li>Copyright &copy; 2005&ndash;2008, Karel Kolman &lt;kolmis@gmail.com&gt;</li>
+			<li>Copyright &copy; 2008&ndash;2009, Mod-PaV</li>
+			<li>Copyright &copy; 2008&ndash;2009, Lars Wortel &lt;larsw84@hotmail.com&gt;</li>
+			<li>Copyright &copy; 2008&ndash;2010, Mod-spambot &lt;daBux@gmx.de&gt;</li>
+			<li>Copyright &copy; 2008&ndash;2010, convincedd &lt;convincedd@googlemail.com&gt;</li>
+			<li>Copyright &copy; 2008&ndash;2011, taised &lt;tiziano.m@gmail.com&gt;</li>
+			<li>Copyright &copy; 2008&ndash;2009, bummerland</li>
+			<li>Copyright &copy; 2008&ndash;2010, Jestar</li>
+			<li>Copyright &copy; 2008&ndash;2010, smates</li>
+			<li>Copyright &copy; 2008&ndash;2009, OBarros</li>
+			<li>Copyright &copy; 2008&ndash;2009, stephan57</li>
+			<li>Copyright &copy; 2009, baumanns</li>
+			<li>Copyright &copy; 2009&ndash;2011, ljushaff</li>
+			<li>Copyright &copy; 2009&ndash;2011, Ryan Li &lt;ryan@ryanium.com&gt;</li>
+			<li>Copyright &copy; 2010, Aimo_Kanuuna &lt;misa.kankare@live.fi&gt;</li>
+		</ul>
+		<p>This program is free software: you can redistribute it and/or modify
+			it under the terms of the GNU General Public License as published by
+		    the Free Software Foundation, either version 3 of the License, or
+		    (at your option) any later version.</p>
+
+		<p>This program is distributed in the hope that it will be useful,
+			but WITHOUT ANY WARRANTY; without even the implied warranty of
+			MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+			GNU General Public License for more details.</p>
+
+		<p>We are also very greatful to the following projects which we
+			have used in both source code and distribution:</p>
+		<ul>
+			<li>An OAuth library by Netflix, Inc., under Apache License,
+				version 2.0.</li>
+			<li>A JavaScript implementation of the SHA-1 algorithm by
+				Paul Johnston, et al., under BSD License.</li>
+		</ul>
+
+		<p>Read <a href="http://www.gnu.org/licenses/gpl.html">GNU General
+			Public License in full text</a>.
+			A copy of GNU General Public License is also available at the
+			root directory of source code under the name of
+			<code>COPYING</code></p>
+	</div>
+	<div class="module">
 		<h3 text-key="about.headDevelopers"></h3>
 		<ul id="about-head-developers" class="about-list" path="about/head_developers/head_developer"></ul>
 	</div>
