--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -21,8 +21,11 @@
 	<script type="application/x-javascript" src="./header-copy-icons.js"></script>
 	<script type="application/x-javascript" src="./core.js"></script>
 	<script type="application/x-javascript" src="./api-proxy.js"></script>
-	<script type="application/x-javascript" src="./oauth.js"></script>
-	<script type="application/x-javascript" src="./sha1.js"></script>
+
+	<!-- external libraries -->
+	<script type="application/x-javascript" src="./lib/jquery.js"></script>
+	<script type="application/x-javascript" src="./lib/oauth.js"></script>
+	<script type="application/x-javascript" src="./lib/sha1.js"></script>
 
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/currency.js"></script>
@@ -153,7 +156,6 @@
 	<script type="application/x-javascript" src="./modules.js"></script>
 	<script type="application/x-javascript" src="./foxtrick.js"></script>
 
-	<script type="application/x-javascript" src="./jquery.js"></script>
 	<script type="application/x-javascript" src="./preferences.js"></script>
 
 	<title>FoxTrick Preferences</title>
