--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -52,6 +52,7 @@
 	<script type="application/x-javascript" src="./forum/go-to-post-box.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-presentation.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-thread-auto-ignore.js"></script>
+	<script type="application/x-javascript" src="./forum/mark-all-as-read.js"></script>
 	<script type="application/x-javascript" src="./matches/match-player-colouring.js"></script>
 	<script type="application/x-javascript" src="./matches/match-report-format.js"></script>
 	<script type="application/x-javascript" src="./matches/ratings.js"></script>
