Use same interface for my-monitor.js and nt-peek.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6273 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -29,6 +29,7 @@
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
+	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
