Introduce ShowFriendlyBooked module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6282 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -98,6 +98,7 @@
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/extended-player-details.js"></script>
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/htms-points.js" />
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/my-monitor.js" />
+	<script type="application/x-javascript" src="./shortcuts-and-tweaks/show-friendly-booked.js" />
 	<script type="application/x-javascript" src="./presentation/original-face.js"></script>
 	<script type="application/x-javascript" src="./presentation/move-player-statement.js"></script>
 	<script type="application/x-javascript" src="./presentation/personality-images.js"></script>
