--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -32,6 +32,7 @@
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
+	<script type="application/x-javascript" src="./util/notify.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
 
