--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -77,6 +77,7 @@
 	<script type="application/x-javascript" src="./information-aggregation/season-stats.js" />
 	<script type="application/x-javascript" src="./information-aggregation/series-flags.js" />
 	<script type="application/x-javascript" src="./information-aggregation/show-friendly-booked.js" />
+	<script type="application/x-javascript" src="./information-aggregation/show-lineup-set.js" />
 	<script type="application/x-javascript" src="./information-aggregation/skill-table.js" />
 	<script type="application/x-javascript" src="./information-aggregation/team-stats.js" />
 	<script type="application/x-javascript" src="./information-aggregation/transfer-deadline.js" />
