--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -127,6 +127,7 @@
 	<script type="application/x-javascript" src="./presentation/ht-date-format.js" />
 	<script type="application/x-javascript" src="./presentation/large-flags.js" />
 	<script type="application/x-javascript" src="./presentation/league-news-filter.js" />
+	<script type="application/x-javascript" src="./presentation/local-time.js" />
 	<script type="application/x-javascript" src="./presentation/match-tables.js" />
 	<script type="application/x-javascript" src="./presentation/move-manager-online.js" />
 	<script type="application/x-javascript" src="./presentation/move-player-select-box.js" />
@@ -205,6 +206,10 @@
 			<tr>
 				<td><label id="pref-read-date-format-label" for="pref-read-date-format" text-key="foxtrick.prefs.captionHTDateformat"></label></td>
 				<td><select id="pref-read-date-format" pref="htDateformat" blocked-by="pref-read-ht-prefs"></select></td>
+			</tr>
+			<tr>
+				<td><label id="pref-print-date-format-label" for="pref-print-date-format" text-key="pref.printDateFormat"></label></td>
+				<td><input id="pref-print-date-format" pref="printDateFormat"></input></td>
 			</tr>
 		</table>
 	</div><!-- ReadHtPrefs -->
