Add a piece of question/answer for print date format.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6518 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -208,7 +208,7 @@
 				<td><select id="pref-read-date-format" pref="htDateformat" blocked-by="pref-read-ht-prefs"></select></td>
 			</tr>
 			<tr>
-				<td><label id="pref-print-date-format-label" for="pref-print-date-format" text-key="pref.printDateFormat"></label></td>
+				<td><label id="pref-print-date-format-label" for="pref-print-date-format"><a href="#faq=print-date-format" text-key="pref.printDateFormat"></a></label></td>
 				<td><input id="pref-print-date-format" pref="printDateFormat"></input></td>
 			</tr>
 		</table>
