New module AddClass for adding classes in TLed player page.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6525 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -20,6 +20,7 @@
 	<script type="application/x-javascript" src="./forum-stage.js"></script>
 	<script type="application/x-javascript" src="./core.js"></script>
 	<script type="application/x-javascript" src="./api-proxy.js"></script>
+	<script type="application/x-javascript" src="./add-class.js"></script>
 
 	<!-- external libraries -->
 	<script type="application/x-javascript" src="./lib/jquery.js"></script>
