--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -85,6 +85,7 @@
 	<script type="application/x-javascript" src="./information-aggregation/transfer-deadline.js" />
 	<script type="application/x-javascript" src="./information-aggregation/youth-promotes.js" />
 	<script type="application/x-javascript" src="./information-aggregation/youth-series-estimation.js" />
+	<script type="application/x-javascript" src="./information-aggregation/supporterstats-enhancements.js" />
 	<script type="application/x-javascript" src="./links/links-achievements.js" />
 	<script type="application/x-javascript" src="./links/links-alliances.js" />
 	<script type="application/x-javascript" src="./links/links-arena.js" />
