--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -168,15 +168,18 @@
 
 	<title>FoxTrick Preferences</title>
 </head>
-<body onload="init();">
+<body onload="try{init();} catch(e){alert(e);}">
 <h1 id="title">
 	<span text-key="foxtrick.prefs.preferences"></span>
 	<span id="version"></span>
+	<div id="pagelist"></div>
 </h1>
 
 <!-- tabs for each category -->
 <ul id="tabs">
 <li id="tab-main"><a text-key="tab.main"></a></li>
+<li id="tab-pagefiltered"><a text-key="tab.pagefiltered"></a></li>
+<li id="tab-allfiltered"><a text-key="tab.allfiltered"></a></li>
 <li id="tab-information_aggregation"><a text-key="tab.informationAggregation"></a></li>
 <li id="tab-shortcuts_and_tweaks"><a text-key="tab.shortcutsAndTweaks"></a></li>
 <li id="tab-presentation"><a text-key="tab.presentation"></a></li>
@@ -293,6 +296,8 @@
 		</ul>
 	</div>
 </div>
+<div id="pane-pagefiltered"></div>
+<div id="pane-allfiltered"></div>
 <div id="pane-information_aggregation"></div>
 <div id="pane-shortcuts_and_tweaks"></div>
 <div id="pane-presentation"></div>
