preferences.xhtml favicon
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6668 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link rel="icon" type="image/png" href="./resources/img/icon-32.png" />
 	<link rel="stylesheet" type="text/css" media="screen" href="./resources/css/preferences.css" />
 
 	<script type="application/x-javascript" src="./const.js"></script>
