page filtered prefs tweaked
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6673 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -173,7 +173,11 @@
 <h1 id="title">
 	<span text-key="foxtrick.prefs.preferences"></span>
 	<span id="version"></span>
-	<div id="pagelist"></div>
+	<p>
+		<button id="filter-all" text-key="filter.all"></button>
+		<button id="filter-page" text-key="filter.page"></button>
+	</p>
+			
 </h1>
 
 <!-- tabs for each category -->
