preferences design tweak. might have sideeffect since layout-change css loading changed with that
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6690 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -173,10 +173,11 @@
 <h1 id="title">
 	<span text-key="foxtrick.prefs.preferences"></span>
 	<span id="version"></span>
-	<p>
+	<br id="title_seperator"/>
+	<span>
 		<button id="filter-all" text-key="filter.all"></button>
 		<button id="filter-page" text-key="filter.page"></button>
-	</p>
+	</span>
 			
 </h1>
 
@@ -397,7 +398,6 @@
 <div id="fixed">
 	<div id="balloon">
 		<button id="save" text-key="button.save"></button>
-		<button id="cancel" text-key="button.cancel"></button>
 	</div>
 	<div id="note">
 		<p id="note-content"></p>
