disable oauth option (default off)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6756 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -269,6 +269,10 @@
 				<input type="checkbox" id="pref-disable-temporarily" pref="disableTemporary" />
 				<label id="pref-disable-temporarily-label" for="pref-disable-temporarily" text-key="foxtrick.prefs.disableTemporaryLabel"></label>
 			</li>
+			<li>
+				<input type="checkbox" id="pref-disable-oauth" pref="disableOauth" />
+				<label id="pref-disable-oauth-label" for="pref-disable-oauth" text-key="foxtrick.prefs.disableOauth"></label>
+			</li>
 		</ul>
 	</div><!-- disable -->
 	<div class="module"><!-- status bar icon -->
