--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -269,10 +269,6 @@
 				<input type="checkbox" id="pref-disable-temporarily" pref="disableTemporary" />
 				<label id="pref-disable-temporarily-label" for="pref-disable-temporarily" text-key="foxtrick.prefs.disableTemporaryLabel"></label>
 			</li>
-			<li>
-				<input type="checkbox" id="pref-disable-oauth" pref="disableOauth" />
-				<label id="pref-disable-oauth-label" for="pref-disable-oauth" text-key="foxtrick.prefs.disableOauth"></label>
-			</li>
 		</ul>
 	</div><!-- disable -->
 	<div class="module"><!-- status bar icon -->
@@ -283,6 +279,10 @@
 	<div class="module"><!-- additional -->
 		<h3 id="pref-additional-title" text-key="foxtrick.prefs.AdditionalOptions"></h3>
 		<ul>
+			<li>
+				<input type="checkbox" id="pref-xml-load" pref="xmlLoad" />
+				<label id="pref-xml-load-label" for="pref-xml-load" text-key="pref.xmlLoad"></label>
+			</li>
 			<li>
 				<input type="checkbox" id="pref-header-icon" pref="smallcopyicons" />
 				<label id="pref-header-icon-label" for="pref-header-icon" text-key="foxtrick.prefs.smallcopyicons"></label>
