Adjust preferences interface layout for large screens. (Fixes #782)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6799 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -389,6 +389,7 @@
 <div id="fixed">
 	<div id="balloon">
 		<button id="save" text-key="button.save"></button>
+		<a id="top" text-key="button.top" href="#title"></a>
 	</div>
 	<div id="note">
 		<p id="note-content"></p>
