Move const.js to env.js and add environment function.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6801 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script type="application/x-javascript" src="./const.js"></script>
+	<script type="application/x-javascript" src="./env.js"></script>
 	<script type="application/x-javascript" src="./prefs.js"></script>
 	<script type="application/x-javascript" src="./pages.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
