--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" href="./resources/img/icon-32.png" />
 	<link rel="stylesheet" type="text/css" media="screen" href="./resources/css/preferences.css" />
 
-	<script type="application/x-javascript" src="./const.js"></script>
+	<script type="application/x-javascript" src="./env.js"></script>
 	<script type="application/x-javascript" src="./prefs.js"></script>
 	<script type="application/x-javascript" src="./pages.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
