Move CSS/JavaScript injection functions from foxtrick.js to util/inject.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6806 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -30,6 +30,7 @@
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
+	<script type="application/x-javascript" src="./util/inject.js"></script>
 	<script type="application/x-javascript" src="./util/layout.js"></script>
 	<script type="application/x-javascript" src="./util/links.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
