--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -162,6 +162,7 @@
 
 	<script type="application/x-javascript" src="./modules.js"></script>
 	<script type="application/x-javascript" src="./foxtrick.js"></script>
+	<script type="application/x-javascript" src="./entry.js"></script>
 
 	<script type="application/x-javascript" src="./preferences.js"></script>
 
