--- a/content/background.html
+++ b/content/background.html
@@ -153,6 +153,7 @@
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-result-filters.js" ></script>
 
 	<script type="application/x-javascript" src="./modules.js"></script>
+	<script type="application/x-javascript" src="./entry.js"></script>
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
 <body>
