session-store.js: again in a seperate file. i'll try to make smaller commits this time
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6833 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -2,6 +2,7 @@
 <head>
 	<script type="application/x-javascript" src="./env.js"></script>
 	<script type="application/x-javascript" src="./prefs.js"></script>
+	<script type="application/x-javascript" src="./session-store.js"></script>
 	<script type="application/x-javascript" src="./pages.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
 	<script type="application/x-javascript" src="./helper.js"></script>
@@ -152,8 +153,7 @@
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-result-filters.js" ></script>
 
 	<script type="application/x-javascript" src="./modules.js"></script>
-	<script type="application/x-javascript" src="./foxtrick.js"></script>
-
+	<script type="application/x-javascript" src="./entry.js"></script>
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
 <body>
