--- a/content/background.html
+++ b/content/background.html
@@ -2,7 +2,6 @@
 <head>
 	<script type="application/x-javascript" src="./env.js"></script>
 	<script type="application/x-javascript" src="./prefs.js"></script>
-	<script type="application/x-javascript" src="./session-store.js"></script>
 	<script type="application/x-javascript" src="./pages.js"></script>
 	<script type="application/x-javascript" src="./l10n.js"></script>
 	<script type="application/x-javascript" src="./helper.js"></script>
@@ -29,6 +28,7 @@
 	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
 	<script type="application/x-javascript" src="./util/notify.js"></script>
+	<script type="application/x-javascript" src="./util/session-store.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
 
