Move api-proxy.js to util/api.js, since it is really a utility not a module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6847 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -18,7 +18,6 @@
 	<script type="application/x-javascript" src="./read-ht-prefs.js"></script>
 	<script type="application/x-javascript" src="./forum-stage.js"></script>
 	<script type="application/x-javascript" src="./core.js"></script>
-	<script type="application/x-javascript" src="./api-proxy.js"></script>
 	<script type="application/x-javascript" src="./add-class.js"></script>
 
 	<!-- external libraries -->
@@ -27,6 +26,7 @@
 	<script type="application/x-javascript" src="./lib/sha1.js"></script>
 
 	<!-- utilities -->
+	<script type="application/x-javascript" src="./util/api.js"></script>
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
