renamed util/links.js to to util/links-box.js (opera file naming issue) moved links/links.js up in xuls/htmls to be on the save side for loading order
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6848 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -23,7 +23,7 @@
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
-	<script type="application/x-javascript" src="./util/links.js"></script>
+	<script type="application/x-javascript" src="./util/links-box.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
@@ -78,6 +78,7 @@
 	<script type="application/x-javascript" src="./information-aggregation/youth-promotes.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/youth-series-estimation.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/supporterstats-enhancements.js" ></script>
+	<script type="application/x-javascript" src="./links/links.js" ></script>
 	<script type="application/x-javascript" src="./links/links-achievements.js" ></script>
 	<script type="application/x-javascript" src="./links/links-alliances.js" ></script>
 	<script type="application/x-javascript" src="./links/links-arena.js" ></script>
@@ -87,7 +88,6 @@
 	<script type="application/x-javascript" src="./links/links-country.js" ></script>
 	<script type="application/x-javascript" src="./links/links-economy.js" ></script>
 	<script type="application/x-javascript" src="./links/links-fans.js" ></script>
-	<script type="application/x-javascript" src="./links/links.js" ></script>
 	<script type="application/x-javascript" src="./links/links-league.js" ></script>
 	<script type="application/x-javascript" src="./links/links-manager.js" ></script>
 	<script type="application/x-javascript" src="./links/links-match.js" ></script>
