--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -32,7 +32,7 @@
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
 	<script type="application/x-javascript" src="./util/inject.js"></script>
 	<script type="application/x-javascript" src="./util/layout.js"></script>
-	<script type="application/x-javascript" src="./util/links.js"></script>
+	<script type="application/x-javascript" src="./util/links-box.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
@@ -87,6 +87,7 @@
 	<script type="application/x-javascript" src="./information-aggregation/youth-promotes.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/youth-series-estimation.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/supporterstats-enhancements.js" ></script>
+	<script type="application/x-javascript" src="./links/links.js" ></script>
 	<script type="application/x-javascript" src="./links/links-achievements.js" ></script>
 	<script type="application/x-javascript" src="./links/links-alliances.js" ></script>
 	<script type="application/x-javascript" src="./links/links-arena.js" ></script>
@@ -96,7 +97,6 @@
 	<script type="application/x-javascript" src="./links/links-country.js" ></script>
 	<script type="application/x-javascript" src="./links/links-economy.js" ></script>
 	<script type="application/x-javascript" src="./links/links-fans.js" ></script>
-	<script type="application/x-javascript" src="./links/links.js" ></script>
 	<script type="application/x-javascript" src="./links/links-league.js" ></script>
 	<script type="application/x-javascript" src="./links/links-manager.js" ></script>
 	<script type="application/x-javascript" src="./links/links-match.js" ></script>
@@ -168,7 +168,7 @@
 
 	<title>FoxTrick Preferences</title>
 </head>
-<body onload="try{init();} catch(e){alert(e);}">
+<body onload="init()">
 <h1 id="title">
 	<span text-key="foxtrick.prefs.preferences"></span>
 	<span id="version"></span>
