preferences.js: init wrapper since operas options runs in content context.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6849 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -168,7 +168,7 @@
 
 	<title>FoxTrick Preferences</title>
 </head>
-<body onload="init()">
+<body onload="initLoader()">
 <h1 id="title">
 	<span text-key="foxtrick.prefs.preferences"></span>
 	<span id="version"></span>
