FoxtrickPrefs.isModuleEnabled() now only receives module name as argument.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6864 1e3807c3-0949-0410-b78e-337b627472c1

--- a/options.html
+++ b/options.html
@@ -34,6 +34,7 @@
 	<script type="application/x-javascript" src="includes/links-box.js"></script>
 	<script type="application/x-javascript" src="includes/match-view.js"></script>
 	<script type="application/x-javascript" src="includes/misc.js"></script>
+	<script type="application/x-javascript" src="includes/module.js"></script>
 	<script type="application/x-javascript" src="includes/note.js"></script>
 	<script type="application/x-javascript" src="includes/notify.js"></script>
 	<script type="application/x-javascript" src="includes/string.js"></script>
