moved background_opera.html and options.html to content folder
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6871 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -3,6 +3,8 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<!-- options/preferences page for mozilla and chrome -->
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" type="image/png" href="./resources/img/icon-32.png" />
 	<link rel="stylesheet" type="text/css" media="screen" href="./resources/css/preferences.css" />
