--- a/content/options.html
+++ b/content/options.html
@@ -3,6 +3,9 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<!-- options/preferences page for opera -->
+	<!-- must be named options.html. must be placed later in root folder -->
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" type="image/png" href="./resources/img/icon-32.png" />
 	<link rel="stylesheet" type="text/css" media="screen" href="content/resources/css/preferences.css" />
