--- a/content/background-opera.html
+++ b/content/background-opera.html
@@ -23,7 +23,7 @@
 	<script type="application/x-javascript" src="includes/links-box.js"></script>
 	<script type="application/x-javascript" src="includes/match-view.js"></script>
 	<script type="application/x-javascript" src="includes/misc.js"></script>
-	<script type="application/x-javascript" src="includes/module.js"></script>
+	<script type="application/x-javascript" src="includes/aa10_module.js"></script>
 	<script type="application/x-javascript" src="includes/note.js"></script>
 	<script type="application/x-javascript" src="includes/notify.js"></script>
 	<script type="application/x-javascript" src="includes/string.js"></script>
