Remove helper.js and move functions to util/id.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6896 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -18,6 +18,7 @@
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
+	<script type="application/x-javascript" src="./util/id.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
@@ -29,7 +30,6 @@
 	<script type="application/x-javascript" src="./util/time.js"></script>
 
 	<!-- core modules -->
-	<script type="application/x-javascript" src="./helper.js"></script>
 	<script type="application/x-javascript" src="./redirections.js"></script>
 	<script type="application/x-javascript" src="./read-ht-prefs.js"></script>
 	<script type="application/x-javascript" src="./forum-stage.js"></script>
