--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -22,6 +22,7 @@
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
+	<script type="application/x-javascript" src="./util/id.js"></script>
 	<script type="application/x-javascript" src="./util/inject.js"></script>
 	<script type="application/x-javascript" src="./util/layout.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
@@ -40,7 +41,6 @@
 	<script type="application/x-javascript" src="./lib/sha1.js"></script>
 
 	<!-- core modules -->
-	<script type="application/x-javascript" src="./helper.js"></script>
 	<script type="application/x-javascript" src="./redirections.js"></script>
 	<script type="application/x-javascript" src="./read-ht-prefs.js"></script>
 	<script type="application/x-javascript" src="./forum-stage.js"></script>
