Use complete date format and substitute print date format. (Fixes #752)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6898 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -220,11 +220,7 @@
 			</tr>
 			<tr>
 				<td><label id="pref-read-date-format-label" for="pref-read-date-format" text-key="foxtrick.prefs.captionHTDateformat"></label></td>
-				<td><select id="pref-read-date-format" pref="htDateformat" blocked-by="pref-read-ht-prefs"></select></td>
-			</tr>
-			<tr>
-				<td><label id="pref-print-date-format-label" for="pref-print-date-format"><a href="#faq=print-date-format" text-key="pref.printDateFormat"></a></label></td>
-				<td><input id="pref-print-date-format" pref="printDateFormat"></input></td>
+				<td><input id="pref-read-date-format" pref="htDateFormat" blocked-by="pref-read-ht-prefs"></input></td>
 			</tr>
 		</table>
 	</div><!-- ReadHtPrefs -->
