Add copy-button.js as utilities for adding a copy button.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6945 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -15,6 +15,7 @@
 
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/api.js"></script>
+	<script type="application/x-javascript" src="./util/copy-button.js"></script>
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/html.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
