preferences.xhtml: reduce tab size to fit in smaller screens.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7042 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -188,19 +188,19 @@
 
 <!-- tabs for each category -->
 <ul id="tabs">
-<li id="tab-main"><a text-key="tab.main"></a></li>
-<li id="tab-pagefiltered"><a text-key="tab.pagefiltered"></a></li>
-<li id="tab-allfiltered"><a text-key="tab.allfiltered"></a></li>
-<li id="tab-information_aggregation"><a text-key="tab.informationAggregation"></a></li>
-<li id="tab-shortcuts_and_tweaks"><a text-key="tab.shortcutsAndTweaks"></a></li>
-<li id="tab-presentation"><a text-key="tab.presentation"></a></li>
-<li id="tab-matches"><a text-key="tab.matches"></a></li>
-<li id="tab-forum"><a text-key="tab.forum"></a></li>
-<li id="tab-links"><a text-key="tab.links"></a></li>
-<li id="tab-alert"><a text-key="tab.alert"></a></li>
-<li id="tab-changes"><a text-key="tab.changes"></a></li>
-<li id="tab-help"><a text-key="tab.help"></a></li>
-<li id="tab-about"><a text-key="tab.about"></a></li>
+<li id="tab-main"><a text-key="tab.main"></a></li><!--
+--><li id="tab-pagefiltered"><a text-key="tab.pagefiltered"></a></li><!--
+--><li id="tab-allfiltered"><a text-key="tab.allfiltered"></a></li><!--
+--><li id="tab-information_aggregation"><a text-key="tab.informationAggregation"></a></li><!--
+--><li id="tab-shortcuts_and_tweaks"><a text-key="tab.shortcutsAndTweaks"></a></li><!--
+--><li id="tab-presentation"><a text-key="tab.presentation"></a></li><!--
+--><li id="tab-matches"><a text-key="tab.matches"></a></li><!--
+--><li id="tab-forum"><a text-key="tab.forum"></a></li><!--
+--><li id="tab-links"><a text-key="tab.links"></a></li><!--
+--><li id="tab-alert"><a text-key="tab.alert"></a></li><!--
+--><li id="tab-changes"><a text-key="tab.changes"></a></li><!--
+--><li id="tab-help"><a text-key="tab.help"></a></li><!--
+--><li id="tab-about"><a text-key="tab.about"></a></li>
 </ul>
 
 <!-- content of each tab -->
