--- a/content/preferences.html
+++ b/content/preferences.html
@@ -138,6 +138,7 @@
 	<script type="application/x-javascript" src="./presentation/league-news-filter.js" ></script>
 	<script type="application/x-javascript" src="./presentation/local-time.js" ></script>
 	<script type="application/x-javascript" src="./presentation/match-tables.js" ></script>
+	<script type="application/x-javascript" src="./presentation/mobile-enhancements.js" ></script>
 	<script type="application/x-javascript" src="./presentation/move-manager-online.js" ></script>
 	<script type="application/x-javascript" src="./presentation/move-player-select-box.js" ></script>
 	<script type="application/x-javascript" src="./presentation/move-player-statement.js" ></script>
